[tool.poetry]
name = 'SpaSRL'
version = '0.1.2'
description = 'Spatially aware self-representation learning'
authors = ['Lequn Wang <wanglequn2019@sibcb.ac.cn>']
classifiers = [
  'Topic :: Scientific/Engineering :: Bio-Informatics',
  'Development Status :: 4 - Beta',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX :: Linux',
  'Intended Audience :: Science/Research',
  'Natural Language :: English',
]
license = 'BSD-3-Clause'
packages = [
  {include = 'SpaSRL'},
]
readme = 'README.md'

[tool.poetry.dependencies]
anndata = '>=0.7.5'
h5py = '>=2.9.0'
ipython = {version = ">=7.20", optional = true, python = ">=3.7"}
leidenalg = {version = '*', optional = true}
nbsphinx = {version = "*", optional = true}
numpy = '>=1.17.0'
pandas = '>=1.0'
pydata-sphinx-theme = {version = ">=0.4.3", optional = true}
python = '>=3.7,<4.0'
python-igraph = {version = '*', optional = true}
scanpy = '>=1.6'
scanpydoc = {version = ">=0.5", optional = true}
scikit-learn = '>=0.21.2'
scikit-misc = {version = '>=0.1.3', optional = true}
sphinx = {version = ">=3.4", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
sphinx_copybutton = {version = "<=0.3.1", optional = true}
torch = '>=1.7.0'
tqdm = '>=4.56.0'
typing_extensions = {version = "*", python = "<3.8", optional = true}

[tool.poetry.extras]
docs = [
  'ipython',
  'sphinx',
  'nbsphinx',
  'pydata-sphinx-theme',
  'scanpydoc',
  'sphinx-autodoc-typehints',
  'sphinx_copybutton',
]
tutorials = [
  'leidenalg',
  'python-igraph',
  'scikit-misc',
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
